changes in models.py to reflect logout functionality
